--- a/Page/styles.css
+++ b/Page/styles.css
@@ -1,15 +1,41 @@
 .desserts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 10px;
     justify-content: center;
     padding: 20px;
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid;
+    width: 75%;
+    margin: 0 auto;
+}
+
 .card {
     border: 1px solid black;
+    position: relative;
     margin: 10px;
-    width: 250px;
+    width: 300px;
     height: 400px;
     padding: 10px;
+}
+
+.add-to-cart-btn {
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 50px;
+    width: 50%;
+    border-radius: 30px;
+    background-color: white;
+    border: 2px solid black;
+    font-size: 16px;
+}
+
+.cart {
+    border: 1px solid;
 }
